--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       </style>
   </head>
   <body>
+      <h3>Data Polling every 2 seconds</h3>
       <section>
         <div id="container"></div>
       </section>
