Changed styling for demo page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
       <style>
           body{
               font-family : sans-serif;
+              background-color : #272822;
+          }
+          #chart-containers, #container {
+              display: flex;
+              flex-direction : column;
+              justify-content: center;
           }
       </style>
   </head>
   <body>
-      <h3>Data Polling every 2 seconds</h3>
       <section>
         <div id="container"></div>
       </section>
