--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,16 @@
       <style>
           body{
               font-family : sans-serif;
+              background-color : #272822;
+          }
+          #chart-containers, #container {
+              display: flex;
+              flex-direction : column;
+              justify-content: center;
           }
       </style>
   </head>
   <body>
-        ZingNet Monitoring Tool
       <section>
         <div id="container"></div>
       </section>
